Fix text overflow issue in registration page list - File names w/o spaces could overflow in the uploaded files list

--- a/static/style.css
+++ b/static/style.css
@@ -117,6 +117,12 @@ h1 {
     height: 1.5rem;
 }
 
+.list-uploaded-files .file-name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 #upload-form label {
     margin-bottom: 0.5rem;
 }
